--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                 <div class="new_container bd-grid">
                     <div class="new_mens">
                         <img src="assets/img/new1.png" alt="" class="new_mens-img">
-                        <h3 class="new_title">Mens Shoes</h3>
+                        <h3 class="new_title">Men Shoes</h3>
                         <span class="new_preci">From $79.99</span>
                         <a href="#" class="button-light">View Collection <i class='bx bx-right-arrow-alt button-icon' ></i></a>
                     </div>
